rest/rest-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rest-server
  template:
    metadata:
      labels:
        app: rest-server
    spec:
      containers:
        - name: rest-server
          image: pradzzyy/demucs-rest:latest
          ports:
            - containerPort: 5000
